<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/toolsCategory"
        android:title="@string/header_categories">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_drawer_home"
                android:title="@string/home" />
            <item
                android:id="@+id/nav_boarding"
                android:icon="@drawable/ic_ic_drawer_how_to_play"
                android:title="@string/boarding" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_ic_drawer_about_us"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_terms_condition"
                android:icon="@drawable/ic_ic_drawer_terms_and_conditions"
                android:title="@string/terms_and_condition" />
            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_menu_search"
                android:title="@string/search"
                android:visible="false" />

            <item
                android:id="@+id/nav_my_sightings"
                android:icon="@drawable/ic_menu_my_sightings"
                android:title="@string/my_sightings"
                android:visible="false" />
        </menu>
    </item>

    <item android:title="@string/header_user"
        android:id="@+id/tools">
        <menu>

            <item
                android:id="@+id/nav_my_collection"
                android:icon="@drawable/ic_ic_drawer_my_collection"
                android:title="@string/my_collection" />
            <item
                android:id="@+id/nav_my_Intrest"
                android:icon="@drawable/ic_ic_drawer_interests"
                android:title="@string/my_interest" />
            <item
                android:id="@+id/nav_scan"
                android:icon="@drawable/ic_ic_drawer_trading"
                android:title="@string/trade" />
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_baseline_account_circle_black_48dp"
                android:title="@string/profile" />
        </menu>
    </item>

</menu>
