<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:riv="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_your_email_address"
        android:textAlignment="center"
        android:textColor="@color/colorAccentDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtEmailForgetDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/placeholder_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnsubmitSendforgetDialog"
        style="@style/AppTheme.ThemeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" />
</LinearLayout>