<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:background="@android:color/transparent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/layout_bg"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtmsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/change_password"
            android:padding="20dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtCurrentPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/current_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtNewPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/new_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtConfirmPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_gravity="end"
            android:gravity="end"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btncancelDialog"
                style="@style/AppTheme.NotColoredButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnchangePasswordDialog"
                style="@style/AppTheme.NotColoredButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF89C7A1"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
