<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:riv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen_10dp">

                <com.libraries.imageview.RoundedImageView
                    android:id="@+id/imgViewThumb"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/bg_image_thumb_placeholder"
                    riv:corner_radius="50dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_35dp"
                    android:text="@string/add_photo"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="@dimen/text_size_10sp"
                    android:visibility="visible" />
            </FrameLayout>

        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:background="@drawable/edittext_round"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:padding="@dimen/dimen_10dp"
                android:id="@+id/txtName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/placeholder_full_name"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:background="@drawable/edittext_round"
                android:digits="@string/username_chars_restriction"
                android:gravity="center"
                android:hint="@string/placeholder_username"
                android:padding="@dimen/dimen_10dp"
                android:imeOptions="actionNext"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:background="@drawable/edittext_round"
                android:gravity="center"
                android:hint="@string/placeholder_email"
                android:inputType="textWebEmailAddress"
                android:padding="@dimen/dimen_10dp"
                android:imeOptions="actionNext"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:background="@drawable/edittext_round"
                android:digits="@string/password_chars_restriction"
                android:gravity="center"
                android:hint="@string/placeholder_password"
                android:inputType="textPassword"
                android:padding="@dimen/dimen_10dp"
                android:imeOptions="actionNext"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/txtPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:background="@drawable/edittext_round"
                android:digits="@string/password_chars_restriction"
                android:gravity="center"
                android:hint="@string/placeholder_confirm_password"
                android:inputType="textPassword"
                android:padding="@dimen/dimen_10dp"
                android:imeOptions="actionNext"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/txtBirth"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:background="@drawable/edittext_round"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/date_of_birth"
                android:inputType="datetime"
                android:padding="@dimen/dimen_10dp"
                android:imeOptions="actionNext"
                android:singleLine="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_round"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinGender"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:entries="@array/gender"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:spinnerMode="dialog"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_round"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:entries="@array/country_codes"
                    android:minWidth="50dp"
                    android:spinnerMode="dialog" />

                <EditText
                    android:id="@+id/txtNumber"
                    android:layout_width="274dp"
                    android:layout_height="@dimen/dimen_50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edittext_round"
                    android:gravity="center"
                    android:hint="Phone Number"
                    android:inputType="phone" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTermsAndCondistion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/by_registering_you_are_accepting_the_terms_and_condition"
                android:textAlignment="center" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnRegister"
                style="@style/AppTheme.GreenButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/register" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
